@@ -9,7 +9,6 @@ HOWTO:
             --with-rootprefix=
             --with-sysvinit-path=
             --with-sysvrcnd-path=
-            --with-rc-local-script-path-start=
             --with-kbd-loadkeys=
             --with-kbd-setfont=
             --with-tty-gid=
