@@ -1,20 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-# This unit gets pulled automatically into multi-user.target by
-# systemd-rc-local-generator if @RC_LOCAL_SCRIPT_PATH_START@ is executable.
-[Unit]
-Description=@RC_LOCAL_SCRIPT_PATH_START@ Compatibility
-ConditionFileIsExecutable=@RC_LOCAL_SCRIPT_PATH_START@
-After=network.target
-
-[Service]
-Type=forking
-ExecStart=@RC_LOCAL_SCRIPT_PATH_START@ start
-TimeoutSec=0
-RemainAfterExit=yes
-SysVStartPriority=99
